# openvg

./: .gitignore  CMakeLists.txt  Makefile  README.md  doc.go  eglstate.h  fontinfo.h  libshapes.c  oglinit.c  omxlib.c  openvg.go  shapes.h  video.c  vmain.c
client/: Makefile  hellovg.c  shapedemo.c
go-client/bubtrail/: bubtrail.go
go-client/chars/: chars.go
go-client/clip/: clip.go
go-client/clock/: clock.go
go-client/colortab/: colortab.go
go-client/halloween/: halloween.go  test.h264
go-client/hellovg/: hellovg.go
go-client/hgrad/: hgrad.go
go-client/particles/: particles.go
go-client/picshow/: picshow.go
go-client/planets/: planets.go
go-client/randcircle/: randcircle.go
go-client/raspi/: raspi.go
go-client/shapedemo/: shapedemo.go
go-client/sl2go/: sl.go
go-client/sl2go/srv/: origdata.json  realtimedepartures.json  sl-api.txt  srv.go  testdata.json
go-client/splash/: splash.go
go-client/vgplot/: vgplot.go
go-client/viewer/: viwer.go
go-client/viewer/srv/: readme.txt  testdata.json
go-client/xmlview/: datasources.xml  layout.xml  playlist.xml  traindata.xml  xmlview.go
il/: ilclient.c  ilclient.h  ilcore.c
omx/: config.h  omxregister.c
omx/base/: Makefile  omx_base_component.c
omx/components/: Makefile
omx/components/audio_effects/: Makefile
omx/components/clocksrc/: Makefile
omx/components/videoscheduler/: Makefile
omx/include/: Makefile  OMX_Core.h  OMX_Index.h
omx/test/: components.txt  listcomponents.c  omxvideodectest.c  omxvideodectest.h
omx/vcos/: vcos.c  vcos.h  vcos_assert.h  vcos_generic_event_flags.c  vcos_generic_event_flags.h  vcos_logcat.c  vcos_logging.h  vcos_msgqueue.c  vcos_msgqueue.h  vcos_platform.h  vcos_platform_types.h  vcos_pthreads.c
shivavg/: glw.c  glx.c  glx.cpp  input.h
util/: maliinit.c
